# elementary-logic-parser

./: .editorconfig  .gitignore  Cargo.toml  README.md  index.html
src/: main.rs
src/component/: app.rs  derivation.rs  mod.rs
src/component/derivation/: mod.rs
src/component/derivation/component/: mod.rs  row.rs  rule.rs  table.rs
src/component/derivation/model/: derivation.rs  item.rs  mod.rs  rule.rs
src/eval/: mod.rs
src/parse/: common.rs  derivation_rule.rs  expression.rs  individual_constant.rs  mod.rs  model.rs  util.rs
src/service/: derivation_store.rs  mod.rs
