[package]
name = "elementary-logic-parser"
version = "0.1.0"
authors = ["jangjunha <jangjunha113@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["rlib", "cdylib"]

[dependencies]
nom = "6.1.2"
yew = { version = "0.18.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
boolinator = "2.4.0"
console_error_panic_hook = "0.1.6"
